--- a/src/index.html
+++ b/src/index.html
@@ -21,7 +21,7 @@
                     <span class="header__separator"></span>
                     <a href="#" class="header__amail">alexdev@gmail.com</a>    
                 </div>
-                <button class="header__burger-menu" onclick="openModal()"></button>
+                <button class="header__burger-menu"onclick="openModal()"></button>
             </div>
         </div>
     </header>
@@ -392,7 +392,21 @@
             <a href="#" class="header__nav-link-modal">Цены</a>
             <a href="#" class="header__nav-link-modal">Обратная связь</a>
         </div>
-        <button class="header__modal-close"></button>
+        <div class="footer-header">
+            <div class="footer-header__footer-info">
+                <div class="footer__footer-contact">
+                    <a href="#" class="footer__phone-link">8 923 777-77-77</a>
+                    <span class="footer__footer-seporator"></span>
+                    <a href="#" class="footer__footer-mail">alexdev@gmail.com</a>
+                </div>
+                <div class="section__social-section">
+                    <a href="#" class="section__social-link">Vk</a>
+                    <a href="#" class="section__social-link">Youtube</a>
+                    <a href="#" class="section__social-link">Linkedin</a>
+                </div>
+            </div>
+        </div>
+        <button class="header__modal-close" onclick="closeModal()"></button>
     </div>
 </body>
 </html>
