--- a/src/index.html
+++ b/src/index.html
@@ -408,6 +408,7 @@
         </div>
         <button class="header__modal-close" onclick="closeModal()"></button>
         <div class="footer__background"></div>
+        <div class="container"></div>
     </div>
 </body>
 </html>
